<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item android:id="@+id/projects"
          android:icon="@drawable/ic_menu_projects"
          android:title="@string/projects"
          app:showAsAction="ifRoom" />
    
    <item android:id="@+id/refresh"
          android:icon="@drawable/ic_menu_refresh"
          android:title="@string/refresh"
          app:showAsAction="ifRoom" />
    
    <item android:id="@+id/account"
          android:icon="@drawable/ic_menu_account_list"
          android:title="@string/account"
          app:showAsAction="ifRoom" />
    
    <item android:id="@+id/preferences"
          android:icon="@drawable/ic_menu_preferences"
          android:title="@string/preferences"
          app:showAsAction="ifRoom" />
    
    <item android:id="@+id/about"
          android:icon="@drawable/ic_menu_about"
          android:title="@string/about"
          app:showAsAction="ifRoom" />

</menu>