<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/padding_normal">

    <TextView
        android:id="@+id/login_header"
        android:text="@string/login_header"
        android:textSize="@dimen/font_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/login_email"
        android:text="@string/email"
        android:textSize="@dimen/font_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_header"
        android:layout_marginTop="@dimen/margin_large" />

    <EditText
        android:id="@+id/login_email_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_email"
        android:singleLine="true"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/login_password"
        android:text="@string/password"
        android:textSize="@dimen/font_med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email_value" />

    <EditText
        android:id="@+id/login_password_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_password"
        android:singleLine="true"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/login_keep_logged_in"
        android:text="@string/keep_logged_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_value"
        android:layout_alignLeft="@+id/login_password_value"
        android:textSize="@dimen/font_med" />

    <Button
        android:id="@+id/login_button"
        android:text="@string/login"
        android:textSize="@dimen/font_large"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_keep_logged_in"
        android:layout_width="fill_parent"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large" />
</RelativeLayout>
