<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal">
    
        <EditText
            android:id="@+id/dialog_edit_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:inputType="text" />
    
        <CheckBox
            android:id="@+id/task_add_use_date"
            android:text="@string/due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_edit_value"
            android:layout_alignParentLeft="true" />
    
        <RelativeLayout
            android:id="@+id/task_add_date_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_add_use_date"
            android:visibility="gone">
            
            <RadioButton
                android:id="@+id/task_add_use_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:checked="true" />
        
            <EditText
                android:id="@+id/task_add_date_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/task_add_use_date_text"
                android:layout_toRightOf="@+id/task_add_use_date_text"
                android:inputType="text"
                android:hint="@string/date_hint" />
        
            <RadioButton
                android:id="@+id/task_add_use_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_add_use_date_text"
                android:layout_alignParentLeft="true"/>
        
            <DatePicker
                android:id="@+id/task_add_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/task_add_date_text"
                android:layout_toRightOf="@+id/task_add_use_date_picker" />
                
        </RelativeLayout>
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_add_date_options"
            android:layout_marginTop="@dimen/margin_normal"
            android:weightSum="2">
    
            <Button
                android:id="@+id/dialog_cancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_large" />
    
            <Button
                android:id="@+id/dialog_save"
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_large" />
        </LinearLayout>
    
    </RelativeLayout>
</ScrollView>